--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="app_name">Android Week View</string>
     <string name="action_today">Go to today</string>
     <string name="action_day_view">Day</string>
     <string name="action_three_day_view">3 day view</string>
     <string name="action_week_view">Week</string>
     <string name="action_month_view">Month</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
