--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="title_activity_swipe_button">SwipeButton</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_main">Calendar</string>
 
 </resources>
